# rex-serve-demo

./: .gitignore  .gitmodules  Cargo.toml  README.md  rex-serve.rexd  rex-serve.toml  vercel.json
api/: rex.rs
routes/: _middleware.rex  health.rex  index.rex  style.css
routes/_content/: sample-article.md
routes/_layouts/: page.html
routes/_ws/: cursors.rex
routes/api/: _middleware.rex  articles.rex
routes/api/articles/: [slug].rex
routes/tour/: api.rex  cursors.rex  deseret.rex  experience.rex  middleware.rex  routing.rex  static-files.rex  templates.rex
