[package]
name = "rex-serve-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rex"
path = "api/rex.rs"

[dependencies]
rex-serve = { path = "rex/crates/rex-serve", package = "rex-serve" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
vercel_runtime = { version = "2", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
